Kubernetes/orgfin-frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orgfin-frontend
spec:
  selector:
    app: orgfin-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
