Kubernetes/orgfin-frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orgfin-frontend
spec:
  ingressClassName: nginx
  rules:
    - host: orgfin-front.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orgfin-frontend
                port:
                  number: 80
